25Aug2025/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: gateway-test
spec:
  selector:
    app: echo
  ports:
    - port: 80
      targetPort: 5678
