25Aug2025/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: gateway-test
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: http
      port: 80
      allowedRoutes:
        namespace:
          from: Same
